# dsp-terra-workspaces-scripts

./: .gitignore  README.md
.github/workflows/: billing-project-e2e.yaml  validate-pr.yaml
tools/: README.md  billing_profiles.py  billing_project.py  lz.py  mrg.py  pyproject.toml  workspace.py
tools/utils/: auth.py  cli.py  conf.py  http.py  poll.py
